# coding_skills

./: .gitignore
coding_test/: README.md
coding_test/bestseller/src/: main.cpp
coding_test/climbing_stairs/: CMakeLists.txt
coding_test/climbing_stairs/src/: main.cpp
coding_test/factorial_zero_num/: CMakeLists.txt
coding_test/factorial_zero_num/src/: main.cpp
coding_test/find_decimal/: CMakeLists.txt
coding_test/find_decimal/src/: main.cpp
coding_test/group_word_checker/: CMakeLists.txt
coding_test/group_word_checker/src/: main.cpp
coding_test/make_palindrom/: CMakeLists.txt
coding_test/make_palindrom/src/: main.cpp
coding_test/movie_shom/src/: main.cpp
coding_test/online_selling/: CMakeLists.txt
coding_test/online_selling/src/: main.cpp
coding_test/polynomino/: CMakeLists.txt
coding_test/polynomino/src/: main.cpp
coding_test/sort_inside/: CMakeLists.txt
coding_test/sort_inside/src/: main.cpp
coding_test/string/: CMakeLists.txt
coding_test/string/src/: main.cpp
coding_test/student_number/: CMakeLists.txt
coding_test/student_number/src/: main.cpp
coding_test/symmetric_difference/: CMakeLists.txt
coding_test/symmetric_difference/src/: main.cpp
coding_test/virus/: CMakeLists.txt
coding_test/virus/src/: main.cpp
coding_test/word_split/src/: main.cpp
coding_test/yosepuse/: CMakeLists.txt
coding_test/yosepuse/src/: main.cpp
cpp/make/: Makefile  main.cpp
cpp/oop/: README.md
cpp/oop/behavioral_patterns/chain_of_responsibility/: CMakeLists.txt  README.md
cpp/oop/behavioral_patterns/chain_of_responsibility/include/: case_one_handler.h  case_two_handler.h  custom_error.h  error_handler.h
cpp/oop/behavioral_patterns/chain_of_responsibility/src/: case_one_handler.cpp  case_two_handler.cpp  custom_error.cpp  test.cpp
cpp/oop/behavioral_patterns/command/: CMakeLists.txt  README.md
cpp/oop/behavioral_patterns/command/include/: game.h
cpp/oop/behavioral_patterns/command/include/charector/: charector.h
cpp/oop/behavioral_patterns/command/include/command/: command.h
cpp/oop/behavioral_patterns/command/include/command/attack/: attack.h  magic_attack.h
cpp/oop/behavioral_patterns/command/include/command/depence/: depence.h  magic_depence.h
cpp/oop/behavioral_patterns/command/src/: test.cpp
cpp/oop/behavioral_patterns/command/src/charector/: charector.cpp
cpp/oop/behavioral_patterns/command/src/command/attack/: attack.cpp  magic_attack.cpp
cpp/oop/behavioral_patterns/command/src/command/depence/: depence.cpp  magic_depence.cpp
cpp/oop/behavioral_patterns/observer/: CMakeLists.txt  README.md
cpp/oop/creational_patterns/builder/: CMakeLists.txt  README.md
cpp/oop/creational_patterns/builder/include/: base_product_builder.hpp  single_type_product_builder.h
cpp/oop/creational_patterns/builder/include/product/: item.hpp  product.hpp  product_with_builder.hpp
cpp/oop/creational_patterns/builder/src/: builder_test1.cpp  builder_test2.cpp  single_type_product_builder.cpp
cpp/oop/creational_patterns/facade/: CMakeLists.txt  README.md
cpp/oop/creational_patterns/facade/include/: camera.h  lidar.h  robot.h
cpp/oop/creational_patterns/facade/src/: camera.cpp  lidar.cpp  main.cpp  robot.cpp
cpp/oop/creational_patterns/factory_method/: CMakeLists.txt  README.md
cpp/oop/creational_patterns/factory_method/include/: sensor_factory.h
cpp/oop/creational_patterns/factory_method/include/sensor/: lidar_sensor.h  sensor.h  sonar_sensor.h
cpp/oop/creational_patterns/factory_method/src/: sensor_factory.cpp  test.cpp
cpp/oop/creational_patterns/factory_method/src/sensor/: lidar_sensor.cpp  sonar_sensor.cpp
cpp/oop/creational_patterns/singleton/: CMakeLists.txt  README.md
cpp/oop/creational_patterns/singleton/buiild/: run
cpp/oop/creational_patterns/singleton/include/: sample.h  singleton.h
cpp/oop/creational_patterns/singleton/src/: main.cpp  sample.cpp
cpp/oop/structural_patterns/adapter/: CMakeLists.txt
cpp/oop/structural_patterns/adapter/include/money/america/: dollar.h
cpp/oop/structural_patterns/adapter/include/money/korea/: dollar_adapter.h  won.h
cpp/oop/structural_patterns/adapter/src/: test.cpp
cpp/oop/structural_patterns/adapter/src/money/america/: dollar.cpp
cpp/oop/structural_patterns/adapter/src/money/korea/: dollar_adapter.cpp  won.cpp
cpp/oop/structural_patterns/decorator/: CMakeLists.txt  README.md
cpp/oop/structural_patterns/decorator/include/: adder.hpp  view.hpp
cpp/oop/structural_patterns/decorator/include/decorator/: time_decorator.hpp
cpp/oop/structural_patterns/decorator/src/: main.cpp
cpp/stl/: CMakeLists.txt  README.md
cpp/stl/cpp_stl_study/auto_and_lambda/: CMakeLists.txt
cpp/stl/cpp_stl_study/auto_and_lambda/src/: main.cpp
cpp/stl/cpp_stl_study/namespace/: CMakeLists.txt
cpp/stl/cpp_stl_study/namespace/include/: kevin.hpp  tony.hpp
cpp/stl/cpp_stl_study/namespace/src/: kevin.cpp  main.cpp  tony.cpp
cpp/stl/cpp_stl_study/range_based_for/: CMakeLists.txt
cpp/stl/cpp_stl_study/range_based_for/src/: main.cpp
cpp/stl/cpp_stl_study/template/: CMakeLists.txt
cpp/stl/cpp_stl_study/template/include/: example_class.hpp  template_class.hpp
cpp/stl/cpp_stl_study/template/src/: example_class.cpp  main.cpp
cpp/stl/cpp_stl_study/using/: CMakeLists.txt
cpp/stl/cpp_stl_study/using/src/: main.cpp
cpp/stl/examples/: CMakeLists.txt
packaging/: Dockerfile  README.md
packaging/cpp/: CMakeLists.txt
packaging/cpp/advanced/: CMakeLists.txt  main.cpp
packaging/cpp/advanced/debian/: changelog  control  rules
packaging/cpp/basic/: main.cpp
packaging/cpp/debian/: changelog  control
packaging/general/: Makefile  dpkg_general_example
packaging/general/debian/: changelog  control  postrm
packaging/python/: build_deb  setup.cfg  setup.py  stdeb.cfg
packaging/python/debian/: postinst  preinst
packaging/python/source/: command.py
react/: README.md  package-lock.json  package.json
react/public/: index.html
react/src/: App.js  index.css
react/src/util/: useInterval.js
spring_kotlin/: HELP.md  README.md  build.gradle.kts
(+63 files in other folders)
